--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-handlebars": "^6.0.6",
+    "method-override": "^3.0.0",
     "mongoose": "^6.6.0",
     "mongoose-slug-generator": "^1.0.4"
   },
